[package]
name = "gosub-async-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk-macros = "0.3"
gtk4 = { version = "0.9.3", features = ["v4_6"] }
chrono = { version = "0.4.31", features = [] }
reqwest = {  version = "0.12.9", features = ["blocking"] }
image = "0.25.4"
uuid = { version = "1.11.0", features = ["v4"] }
log = "0.4.22"
once_cell = "1.5"
thiserror = "1.0.25"
colog = "1.3.0"
tokio = { version = "1.41.0", features = ["rt-multi-thread"] }
bytes = "1.8.0"
rand = "0.9.0-alpha.2"
async-channel = "2.3.1"

[build-dependencies]
glib-build-tools = "0.18.0"
